# cryptonewsbot

./: .env.example  .gitignore  README.md  chainbounty_x_integration.md  plan.md  pyproject.toml  research.md  style-guide.html
config/: style_profile.example.json  style_profile.production.json
config/feeds/: crypto_sources.json
deploy/: com.chainbounty.cryptonewsbot.daily.plist.template
scripts/: deploy_local_runtime.sh  install_launchd.sh  run_daily.py  run_daily.sh
src/cryptonewsbot/: __init__.py  config.py  database.py  main.py
src/cryptonewsbot/application/: clustering.py  deduplication.py  filtering.py  formatter.py  normalization.py  pipeline.py  post_generation.py  summarizer.py
src/cryptonewsbot/domain/: models.py
src/cryptonewsbot/infrastructure/: llm.py  rss.py  storage.py  telegram.py  x.py
src/cryptonewsbot/interfaces/: __init__.py  cli.py
tests/: test_clustering.py  test_config.py  test_deduplication.py  test_filtering.py  test_formatter.py  test_llm.py  test_pipeline.py  test_post_generation.py  test_rss.py  test_x.py
