[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptonewsbot"
version = "0.1.0"
description = "Daily crypto news digest bot that turns recent articles into X-ready posts and Telegram digests."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
